--- a/OpenGLExercise01/OpenGLExercise01.vcxproj.filters
+++ b/OpenGLExercise01/OpenGLExercise01.vcxproj.filters
@@ -47,5 +47,7 @@
     <None Include="color.vs" />
     <None Include="lightingCube.fs" />
     <None Include="lightingCube.vs" />
+    <None Include="materialCube.fs" />
+    <None Include="materialCube.vs" />
   </ItemGroup>
 </Project>
