--- a/OpenGLExercise01/OpenGLExercise01.vcxproj
+++ b/OpenGLExercise01/OpenGLExercise01.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="fragmentSource.glsl" />
@@ -153,12 +154,17 @@
   <ItemGroup>
     <Image Include="awesomeface.png" />
     <Image Include="container.jpg" />
+    <Image Include="container2.png" />
+    <Image Include="container2_specular.png" />
+    <Image Include="matrix.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="color.fs" />
     <None Include="color.vs" />
     <None Include="lightingCube.fs" />
     <None Include="lightingCube.vs" />
+    <None Include="lightMapCube.fs" />
+    <None Include="lightMapCube.vs" />
     <None Include="materialCube.fs" />
     <None Include="materialCube.vs" />
   </ItemGroup>
