--- a/OpenGLExercise01/OpenGLExercise01.vcxproj.filters
+++ b/OpenGLExercise01/OpenGLExercise01.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="Camera.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="vertexSource.glsl" />
@@ -41,6 +44,15 @@
     <Image Include="awesomeface.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="container2.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="container2_specular.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="matrix.jpg">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="color.fs" />
@@ -49,5 +61,7 @@
     <None Include="lightingCube.vs" />
     <None Include="materialCube.fs" />
     <None Include="materialCube.vs" />
+    <None Include="lightMapCube.fs" />
+    <None Include="lightMapCube.vs" />
   </ItemGroup>
 </Project>
