--- a/OpenGLExercise01/OpenGLExercise01.vcxproj.filters
+++ b/OpenGLExercise01/OpenGLExercise01.vcxproj.filters
@@ -29,10 +29,16 @@
     <ClInclude Include="Camera.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="stb_image.h">
+    <ClInclude Include="directionLightCube.vs" />
+    <ClInclude Include="Mesh.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="directionLightCube.vs" />
+    <ClInclude Include="Model.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FileSystem.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="vertexSource.glsl" />
@@ -71,5 +77,8 @@
     <None Include="pointLightCube.fs" />
     <None Include="spotLightCube.vs" />
     <None Include="spotLightCube.fs" />
+    <None Include="packages.config" />
+    <None Include="model.vs" />
+    <None Include="model.fs" />
   </ItemGroup>
 </Project>
